prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__aggregation.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mysql:skip\n# clickhouse:skip\nfrom tracks\nfilter genre_id == 100\nderive empty_name = name == ''\naggregate {sum track_id, concat_array name, all empty_name, any empty_name}\n"
input_file: prqlc/prqlc/tests/integration/queries/aggregation.prql
---
from tracks
filter genre_id == 100
derive empty_name = name == ""
aggregate {
  sum track_id,
  concat_array name,
  all empty_name,
  any empty_name,
}
