prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mysql:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.longform.prql
---
from invoices
select {customer_id, invoice_id, billing_country}
take 10..15
append (
  from invoices
  select {customer_id, invoice_id, billing_country}
  take 40..45
)
select {billing_country, invoice_id}
