prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# duckdb:skip\n# generic:skip\n# glaredb:skip\n# sqlite:skip\n\n# mysql:test\n# postgres:test\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 10..15\nappend (\n  from invoices\n  select { customer_id, invoice_id, billing_country }\n  take 40..45\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select.shortform.prql
---
from invoices
select {customer_id, invoice_id, billing_country}
take 10..15
append (
  from invoices
  select {customer_id, invoice_id, billing_country}
  take 40..45
)
select {billing_country, invoice_id}
