prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select_compute.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# duckdb:skip\n# generic:skip\n# glaredb:skip\n# sqlite:skip\n\n# mysql:test\n# postgres:test\n\nfrom invoices\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.shortform.prql
---
from invoices
select {customer_id, invoice_id, total}
take 5
append (
  from invoice_items
  select {invoice_line_id, invoice_id, unit_price}
  take 5
)
select {
  a = customer_id * 2,
  b = math.round 1 invoice_id * total,
}
