prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select_multiple_with_null.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mysql:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 5\nappend (\n  from employees\n  select { employee_id, employee_id, country }\n  take 5\n)\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, null }\n  take 5\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.longform.prql
---
from invoices
select {customer_id, invoice_id, billing_country}
take 5
append (
  from employees
  select {employee_id, employee_id, country}
  take 5
)
append (
  from invoice_items
  select {invoice_line_id, invoice_id, null}
  take 5
)
select {billing_country, invoice_id}
