prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select_nulls.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# duckdb:skip\n# generic:skip\n# glaredb:skip\n# sqlite:skip\n\n# mysql:test\n# postgres:test\n\nfrom invoices\nselect {an_id = invoice_id, name = null}\ntake 2\nappend (\n  from employees\n  select {an_id = null, name = first_name}\n  take 2\n)\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nulls.shortform.prql
---
from invoices
select {an_id = invoice_id, name = null}
take 2
append (
  from employees
  select {an_id = null, name = first_name}
  take 2
)
