prqlc/prqlc/tests/integration/snapshots/integration__queries__fmt__append_select_nulls.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect {an_id = invoice_id, name = null}\ntake 2\nappend (\n  from employees\n  select {an_id = null, name = first_name}\n  take 2\n)\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nulls.prql
---
from invoices
select {an_id = invoice_id, name = null}
take 2
append (
  from employees
  select {an_id = null, name = first_name}
  take 2
)
